# llm-zoomcamp

./: agents.py  notebook.py  persistent_rag_ingest  pyproject.toml  rag01.py  rag_helper.py
evaluation04/: 02-search-eval.py  03-rag-evals.py  data_gen.py  main.py  pyproject.toml
monitoring05/: app.py  assistant.py  dashboard.py  db_init.py  db_query.py  evaluation_utils.py  judge.py  main.py  metrics.py  pyproject.toml  rag_helper.py
rag01/: agents.py  faq.db  pyproject.toml  rag.py
vector_search02/: main.py  pyproject.toml  vector_search.py  vector_search_persistent.py  vector_search_pgvector.py
