[project]
name = "vector-search02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.4.0",
    "minsearch>=0.1.0",
    "pyarrow>=24.0.0",
    "ragbase>=0.1.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "setuptools>=81.0.0",
]
